# ablc

./: .gitignore  README.md  grammar.txt  meson.build
src/: abc_lexer.c  abc_lexer.h  abc_parser.c  abc_parser.h  abc_type.h  abc_typechecker.c  abc_typechecker.h  main.c
src/codegen/: ir.c  ir.h  x64.c  x64.h  x64_constants.c  x64_regalloc.c  x64_regalloc.h
src/data/: abc_arr.c  abc_arr.h  abc_pool.c  abc_pool.h
testdata/: basictokens.al  loop.al  many_args.al  no_vars.al  ok_program.al  rec_fib.al  rec_fib_simple.al  simple_program.al
